<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlo"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powtorz"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/losowe"
        android:textSize="25dp"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/losowe"
        android:text="@string/losuj"
        android:textSize="20dp"
        android:onClick="losuj"/>

    <TextView
        android:id="@+id/sprawdzian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wiedza"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@id/button"
        android:textSize="25dp"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:layout_below="@id/sprawdzian"
        android:text="@string/quiz"
        android:onClick="losuj"/>
</RelativeLayout>