<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlo"
    tools:context=".PytanieOFlage">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">




    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="271dp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/jaka_flaga"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:visibility="visible" />


    <EditText
        android:id="@+id/odpEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/podaj"
        android:inputType="textCapSentences"
        android:textSize="25sp" />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sprawdz"
        android:layout_gravity="center_horizontal"
        android:onClick="sprawdz"/>

</LinearLayout>
</ScrollView>